[gd_scene load_steps=22 format=3 uid="uid://d2gp1dbwx1wdj"]

[ext_resource type="Script" path="res://Assets/inimigos/inimigo1/inimigo_1.gd" id="1_03eev"]
[ext_resource type="Texture2D" uid="uid://bcow1vruxwvpg" path="res://Assets/inimigos/inimigo1/Walk.png" id="5_7mcr2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu5qb"]
size = Vector2(84, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bnr4"]
atlas = ExtResource("5_7mcr2")
region = Rect2(0, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4qw2"]
atlas = ExtResource("5_7mcr2")
region = Rect2(57, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_riu86"]
atlas = ExtResource("5_7mcr2")
region = Rect2(114, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x040y"]
atlas = ExtResource("5_7mcr2")
region = Rect2(171, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_q806q"]
atlas = ExtResource("5_7mcr2")
region = Rect2(228, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkgti"]
atlas = ExtResource("5_7mcr2")
region = Rect2(285, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_s55yx"]
atlas = ExtResource("5_7mcr2")
region = Rect2(0, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5svd"]
atlas = ExtResource("5_7mcr2")
region = Rect2(57, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qusp7"]
atlas = ExtResource("5_7mcr2")
region = Rect2(114, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_74cxt"]
atlas = ExtResource("5_7mcr2")
region = Rect2(171, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs7mg"]
atlas = ExtResource("5_7mcr2")
region = Rect2(228, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1joy1"]
atlas = ExtResource("5_7mcr2")
region = Rect2(285, 0, 57, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_yla2x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bnr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4qw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riu86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x040y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q806q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkgti")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s55yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5svd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qusp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74cxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs7mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1joy1")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcaww"]
size = Vector2(79, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxhbb"]
size = Vector2(62.1429, 50.7143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4ghj"]
size = Vector2(173, 80.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cdky"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig5er"]
bg_color = Color(0.980392, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Inimigo1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_03eev")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_iu5qb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(2, 2)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_yla2x")
animation = &"walk"

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("RectangleShape2D_vcaww")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(-0.5, 5.5)
scale = Vector2(1.4, 1.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_uxhbb")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(2, -34)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_i4ghj")

[node name="BarradeVida" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -39.0
offset_right = 21.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_0cdky")
theme_override_styles/fill = SubResource("StyleBoxFlat_ig5er")
max_value = 300.0
show_percentage = false

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
